DuPont DevSB/src/objects/Trademark_Abuse_Sample__c.object
<CustomObject>
    <fields>
        <fullName>Total_Product_Price_Currency__c</fullName>
        <label>Total Product Price Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ARS</fullName>
                </value>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>BRL</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>CHF</fullName>
                </value>
                <value>
                    <fullName>CLP</fullName>
                </value>
                <value>
                    <fullName>CNY</fullName>
                </value>
                <value>
                    <fullName>COP</fullName>
                </value>
                <value>
                    <fullName>CZK</fullName>
                </value>
                <value>
                    <fullName>DKK</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>HKD</fullName>
                </value>
                <value>
                    <fullName>HUF</fullName>
                </value>
                <value>
                    <fullName>IDR</fullName>
                </value>
                <value>
                    <fullName>INR</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>KRW</fullName>
                </value>
                <value>
                    <fullName>KZT</fullName>
                </value>
                <value>
                    <fullName>MMK</fullName>
                </value>
                <value>
                    <fullName>MXN</fullName>
                </value>
                <value>
                    <fullName>MYR</fullName>
                </value>
                <value>
                    <fullName>NOK</fullName>
                </value>
                <value>
                    <fullName>NZD</fullName>
                </value>
                <value>
                    <fullName>PHP</fullName>
                </value>
                <value>
                    <fullName>PKR</fullName>
                </value>
                <value>
                    <fullName>PLN</fullName>
                </value>
                <value>
                    <fullName>RON</fullName>
                </value>
                <value>
                    <fullName>RUB</fullName>
                </value>
                <value>
                    <fullName>SAR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Product_Price_USD__c</fullName>
        <label>Total Product Price (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Product_Quantity_Identified_Unit__c</fullName>
        <label>Total Product Quantity Identified Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>g</fullName>
                </value>
                <value>
                    <fullName>kgs</fullName>
                </value>
                <value>
                    <fullName>lbs</fullName>
                </value>
                <value>
                    <fullName>ltrs</fullName>
                </value>
                <value>
                    <fullName>ml</fullName>
                </value>
                <value>
                    <fullName>ozs</fullName>
                </value>
                <value>
                    <fullName>Packs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Product_Quantity_Identified__c</fullName>
        <description>This is a number field.  Should be integer</description>
        <label>Total Product Quantity Identified</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trademark_Abuse_Case_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Trademark Abuse Case Details related to this Sample</description>
        <inlineHelpText>Reporting requirement called for a relationship between trademark and sample data - hence this lookup was created. The field is populated using trigger - when the case related sample is created</inlineHelpText>
        <label>Trademark Abuse Case Details</label>
        <referenceTo>Case_Details__c</referenceTo>
        <relationshipLabel>Samples/Trap Purchases</relationshipLabel>
        <relationshipName>Samples_Trap_Purchases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trap_Purchase_Comments__c</fullName>
        <description>comments for Trap Purchase 1</description>
        <label>Trap Purchase Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Trap_Purchase_Conclusion__c</fullName>
        <label>Trap Purchase Conclusion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AUTHENTIC</fullName>
                </value>
                <value>
                    <fullName>COUNTERFEIT</fullName>
                </value>
                <value>
                    <fullName>UNCLEAR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trap_Purchase_Packaging_Analysis__c</fullName>
        <label>Trap Purchase Packaging Analysis</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Trap_Purchase_Technical_Analysis__c</fullName>
        <label>Trap Purchase Technical Analysis</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Value_Chain_Identified__c</fullName>
        <label>Value Chain Identified</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dealer</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Farm</fullName>
                </value>
                <value>
                    <fullName>Formulator</fullName>
                </value>
                <value>
                    <fullName>Internet</fullName>
                </value>
                <value>
                    <fullName>Shop</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Wholesaler</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Sample/Trap Purchase</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Samples/Trap Purchases</pluralLabel>
    <recordTypes>
        <fullName>Brand_Protection_Abuse_Sample</fullName>
        <active>true</active>
        <label>Brand Protection Abuse Sample</label>
    </recordTypes>
    <recordTypes>
        <fullName>Crop_Sample</fullName>
        <active>false</active>
        <label>Crop Sample</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>